[package]
name = "ftoa"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>", "Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "This is a fork of the `dtoa` crate which writes integer value floats without trailing `.0`. Fast functions for printing floating-point primitives to an io::Write."
repository = "https://github.com/dtolnay/dtoa"
documentation = "https://github.com/dtolnay/dtoa"
include = ["Cargo.toml", "src/**/*.rs"]
